Remove "Use" parameter from bluegene.conf. It is vestigial.

--- a/trunk/src/plugins/select/bluegene/bluegene.conf
+++ b/trunk/src/plugins/select/bluegene/bluegene.conf
@@ -1,7 +1,7 @@
 # Sample Bluegene/L plugin configuration file.  See README for
 # description.  The BGL parititon nodes must match preconfigured SLURM
 # partitions exactly (e.g. "bgl[000x001]" != "bgl[000,001]". Default 
-# value for Type is Mesh. Default value for Use is Coprocessor.
+# value for Type is Mesh. 
 
 BlrtsImage=/bgl/edi/build/bglsys/bin/rts_hw.rts
 LinuxImage=/bgl/edi/build/bglsys/bin/zImage.elf
