Experimental spec file for RPM.

--- a/trunk/slurm.spec.in
+++ b/trunk/slurm.spec.in
@@ -155,35 +155,35 @@ rm -rf $RPM_BUILD_ROOT
 %doc DISCLAIMER
 %doc COPYING
 %doc etc/slurm.conf.example
-%doc html/arch.gif
-%doc html/authplugins.html
-%doc html/bluegene.html
-%doc html/coding_style.pdf
-%doc html/documentation.html
-%doc html/download.html
-%doc html/entities.gif
-%doc html/faq.html
-%doc html/help.html
-%doc html/jobcompplugins.html
-%doc html/lll.gif
-%doc html/maui.html
-%doc html/news.html
-%doc html/overview.html
-%doc html/platforms.html
-%doc html/plugins.html
-%doc html/programmer_guide.html
-%doc html/publications.html
-%doc html/quickstart.html
-%doc html/quickstart_admin.html
-%doc html/schedplugins.html
-%doc html/selectplugins.html
-%doc html/slurm.html
-%doc html/slurm_banner.jpg
-%doc html/slurm_design.pdf
-%doc html/slurmstyles.css
-%doc html/spacer.gif
-%doc html/switchplugins.html
-%doc html/team.html
+%doc arch.gif
+%doc authplugins.html
+%doc bluegene.html
+%doc coding_style.pdf
+%doc documentation.html
+%doc download.html
+%doc entities.gif
+%doc faq.html
+%doc help.html
+%doc jobcompplugins.html
+%doc lll.gif
+%doc maui.html
+%doc news.html
+%doc overview.html
+%doc platforms.html
+%doc plugins.html
+%doc programmer_guide.html
+%doc publications.html
+%doc quickstart.html
+%doc quickstart_admin.html
+%doc schedplugins.html
+%doc selectplugins.html
+%doc slurm.html
+%doc slurm_banner.jpg
+%doc slurm_design.pdf
+%doc slurmstyles.css
+%doc spacer.gif
+%doc switchplugins.html
+%doc team.html
 %{_bindir}/scancel
 %{_bindir}/scontrol
 %{_bindir}/sinfo
