--- a/trunk/slurm.spec.in
+++ b/trunk/slurm.spec.in
@@ -156,34 +156,34 @@ rm -rf $RPM_BUILD_ROOT
 %doc COPYING
 %doc etc/slurm.conf.example
 %doc arch.gif
-%doc authplugins.html
-%doc bluegene.html
-%doc coding_style.pdf
-%doc documentation.html
-%doc download.html
-%doc entities.gif
-%doc faq.html
-%doc help.html
-%doc jobcompplugins.html
-%doc lll.gif
-%doc maui.html
-%doc news.html
-%doc overview.html
-%doc platforms.html
-%doc plugins.html
-%doc programmer_guide.html
-%doc publications.html
-%doc quickstart.html
-%doc quickstart_admin.html
-%doc schedplugins.html
-%doc selectplugins.html
-%doc slurm.html
-%doc slurm_banner.jpg
-%doc slurm_design.pdf
-%doc slurmstyles.css
-%doc spacer.gif
-%doc switchplugins.html
-%doc team.html
+%doc doc/html/authplugins.html
+%doc doc/html/bluegene.html
+%doc doc/html/coding_style.pdf
+%doc doc/html/documentation.html
+%doc doc/html/download.html
+%doc doc/html/entities.gif
+%doc doc/html/faq.html
+%doc doc/html/help.html
+%doc doc/html/jobcompplugins.html
+%doc doc/html/lll.gif
+%doc doc/html/maui.html
+%doc doc/html/news.html
+%doc doc/html/overview.html
+%doc doc/html/platforms.html
+%doc doc/html/plugins.html
+%doc doc/html/programmer_guide.html
+%doc doc/html/publications.html
+%doc doc/html/quickstart.html
+%doc doc/html/quickstart_admin.html
+%doc doc/html/schedplugins.html
+%doc doc/html/selectplugins.html
+%doc doc/html/slurm.html
+%doc doc/html/slurm_banner.jpg
+%doc doc/html/slurm_design.pdf
+%doc doc/html/slurmstyles.css
+%doc doc/html/spacer.gif
+%doc doc/html/switchplugins.html
+%doc doc/html/team.html
 %{_bindir}/scancel
 %{_bindir}/scontrol
 %{_bindir}/sinfo
