--- a/trunk/slurm.spec.in
+++ b/trunk/slurm.spec.in
@@ -30,6 +30,13 @@ Requires: openssl >= 0.9.6
 #
 %define __os_install_post /usr/lib/rpm/brp-compress
 
+#
+# Should unpackaged files in a build root terminate a build?
+#
+# Note: The default value should be 0 for legacy compatibility.
+# This was added due to a bug in Suse Linux. For a good reference, see
+# http://slforums.typo3-factory.net/index.php?showtopic=11378
+%_unpackaged_files_terminate_build      0
 
 %package devel
 Summary: Development package for SLURM.
@@ -155,35 +162,7 @@ rm -rf $RPM_BUILD_ROOT
 %doc DISCLAIMER
 %doc COPYING
 %doc etc/slurm.conf.example
-%doc doc/html/arch.gif
-%doc doc/html/authplugins.html
-%doc doc/html/bluegene.html
-%doc doc/html/coding_style.pdf
-%doc doc/html/documentation.html
-%doc doc/html/download.html
-%doc doc/html/entities.gif
-%doc doc/html/faq.html
-%doc doc/html/help.html
-%doc doc/html/jobcompplugins.html
-%doc doc/html/lll.gif
-%doc doc/html/maui.html
-%doc doc/html/news.html
-%doc doc/html/overview.html
-%doc doc/html/platforms.html
-%doc doc/html/plugins.html
-%doc doc/html/programmer_guide.html
-%doc doc/html/publications.html
-%doc doc/html/quickstart.html
-%doc doc/html/quickstart_admin.html
-%doc doc/html/schedplugins.html
-%doc doc/html/selectplugins.html
-%doc doc/html/slurm.html
-%doc doc/html/slurm_banner.jpg
-%doc doc/html/slurm_design.pdf
-%doc doc/html/slurmstyles.css
-%doc doc/html/spacer.gif
-%doc doc/html/switchplugins.html
-%doc doc/html/team.html
+%doc doc/html
 %{_bindir}/scancel
 %{_bindir}/scontrol
 %{_bindir}/sinfo
