--- a/trunk/slurm.spec.in
+++ b/trunk/slurm.spec.in
@@ -136,6 +136,7 @@ DESTDIR="$RPM_BUILD_ROOT" make install
 
 install -D -m755 etc/init.d.slurm $RPM_BUILD_ROOT/etc/init.d/slurm
 install -D -m644 etc/slurm.conf.example $RPM_BUILD_ROOT/etc/slurm/slurm.conf
+install -D -m644 etc/bluegene.conf.example $RPM_BUILD_ROOT/etc/slurm/bluegene.conf
 # Delete unpackaged files:
 rm -f $RPM_BUILD_ROOT/%{_libdir}/slurm/*.{a,la}
 
@@ -213,7 +214,9 @@ rm -rf $RPM_BUILD_ROOT
 
 %files bluegene
 %defattr(-,root,root)
+%doc etc/bluegene.conf.example
 %{_libdir}/slurm/select_bluegene.so
+%config(noreplace) /etc/slurm/bluegene.conf
 #############################################################################
 
 %files sched-wiki
@@ -262,8 +265,10 @@ fi
 
 
 %changelog
+* Thu Feb 24 2005 Morris Jette <jette1@llnl.gov>
+- added bluegene.conf.example to distribution
 * Thu Feb 10 2005 Morris Jette <jette1@llnl.gov>
-- disable rpm build termination if unpackaged files found (rpm bug)
+- disable rpm build termination if unpackaged files found (suse rpm bug)
 * Wed Jan 02 2005 Morris Jette <jette1@llnl.gov>
 - added smap package
 * Tue Nov 16 2004 Morris Jette <jette1@llnl.gov>
