Do not install sayMessages.h (needed for bluegene plugin build only).

--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -24,7 +24,9 @@ EXTRA_DIST =			\
 pkginclude_HEADERS =		\
 	slurm/bnr.h		\
 	slurm/slurm.h 		\
-	slurm/slurm_errno.h	\
+	slurm/slurm_errno.h
+
+noinst_HEADERS =		\
 	sayMessage.h
 
 MAINTAINERCLEANFILES = 					\
