Major update for smap.  has new functionality to find the bp XYZ off a Rack/Midplane id or vice versa.  Plugin can work off getting the partitions from the system.  We still need to test plugin so the code is just skipped over right now.

--- a/trunk/slurm/slurm.h.in
+++ b/trunk/slurm/slurm.h.in
@@ -184,7 +184,8 @@ enum select_data_type {
 enum select_print_mode {
 	SELECT_PRINT_HEAD,	/* Print just the header */
 	SELECT_PRINT_DATA,	/* Print just the data */
-	SELECT_PRINT_MIXED	/* Print "field=value" */
+	SELECT_PRINT_MIXED,	/* Print "field=value" */
+	SELECT_PRINT_BGL_ID	/* Print just the BGL_ID */
 };
 
 /* Possible task distributions across the nodes */
