--- a/trunk/slurm.spec.in
+++ b/trunk/slurm.spec.in
@@ -215,8 +215,8 @@ rm -rf $RPM_BUILD_ROOT
 %files bluegene
 %defattr(-,root,root)
 %doc etc/bluegene.conf.example
-%{_bindir}/slurm_epilog
-%{_bindir}/slurm_prolog
+%{_sbindir}/slurm_epilog
+%{_sbindir}/slurm_prolog
 %{_libdir}/slurm/select_bluegene.so
 %config(noreplace) /etc/slurm/bluegene.conf
 #############################################################################
