-- Add network option to srun and job creation API for specification     of communication protocol over IBM Federation switch.  -- Add new slurm.conf parameter ProctrackType (process tracking) and     associated plugin in the slurmd module.

--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -205,6 +205,8 @@ AC_CONFIG_FILES([Makefile
 		 src/plugins/jobcomp/filetxt/Makefile
 		 src/plugins/jobcomp/none/Makefile
 		 src/plugins/jobcomp/script/Makefile
+		 src/plugins/proctrack/Makefile
+		 src/plugins/proctrack/sid/Makefile
 		 src/plugins/sched/Makefile
 		 src/plugins/sched/backfill/Makefile
 		 src/plugins/sched/builtin/Makefile
