--- a/trunk/etc/slurm.conf.example
+++ b/trunk/etc/slurm.conf.example
@@ -200,6 +200,18 @@
 
 
 #
+# o Define the process tracking mechanism in use.
+#
+# "ProctrackType"          : the type of process tracking mechanism
+#     "proctrack/kern_ext" : use AIX kernel extension for process tracking,
+#                            the default value on AIX computers
+#     "proctrack/sid"      : use Unix session ID for process tracking,
+#                            the default value on all other computers
+#
+# ProctrackType=proctrack/sid
+
+
+#
 # o Define the places to look for SLURM plugins.  This is a
 #   colon-separated list of directories, just like the PATH
 #   environment variable.
@@ -238,9 +250,9 @@
 #
 # Example:
 #
-# SlurmctldTimeout=60	# Defaults to 300 seconds
-# SlurmdTimeout=60	# Defaults to 300 seconds
-# HeartBeatInterval=20	# Defaults to 30 seconds
+# SlurmctldTimeout=300	# Defaults to 300 seconds
+# SlurmdTimeout=300	# Defaults to 300 seconds
+# HeartBeatInterval=30	# Defaults to 30 seconds
 # InactiveLimit=600	# Defaults to 0 (unlimited)
 # MinJobAge=30		# Defaults to 300 seconds
 # KillWait=10		# Defaults to 30 seconds
