--- a/trunk/slurm.spec.in
+++ b/trunk/slurm.spec.in
@@ -181,6 +181,7 @@ rm -rf $RPM_BUILD_ROOT
 %{_libdir}/slurm/jobcomp_none.so
 %{_libdir}/slurm/jobcomp_filetxt.so
 %{_libdir}/slurm/jobcomp_script.so
+%{_libdir}/slurm/proctrack_sid.so
 %{_libdir}/slurm/sched_backfill.so
 %{_libdir}/slurm/sched_builtin.so
 %{_libdir}/slurm/sched_hold.so
@@ -267,6 +268,8 @@ fi
 
 
 %changelog
+* Fri Feb 25 2005 Morris Jette <jette1@llnl.gov>
+- added proctrack_sid plugin
 * Thu Feb 24 2005 Morris Jette <jette1@llnl.gov>
 - added bluegene.conf.example to distribution
 - added slurm_epilog and slurm_prolog to bluegene package
