Added stub for AIX kernel extension process tracking plugin (just uses sid  for now).

--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -206,6 +206,7 @@ AC_CONFIG_FILES([Makefile
 		 src/plugins/jobcomp/none/Makefile
 		 src/plugins/jobcomp/script/Makefile
 		 src/plugins/proctrack/Makefile
+		 src/plugins/proctrack/aix/Makefile
 		 src/plugins/proctrack/sid/Makefile
 		 src/plugins/sched/Makefile
 		 src/plugins/sched/backfill/Makefile
