--- a/trunk/slurm.spec.in
+++ b/trunk/slurm.spec.in
@@ -181,6 +181,7 @@ rm -rf $RPM_BUILD_ROOT
 %{_libdir}/slurm/jobcomp_none.so
 %{_libdir}/slurm/jobcomp_filetxt.so
 %{_libdir}/slurm/jobcomp_script.so
+%{_libdir}/slurm/proctrack_aix.so
 %{_libdir}/slurm/proctrack_sid.so
 %{_libdir}/slurm/sched_backfill.so
 %{_libdir}/slurm/sched_builtin.so
@@ -268,6 +269,8 @@ fi
 
 
 %changelog
+* Fri Mar 04 2005 Morris Jette <jette1@llnl.gov>
+- added proctrack_aix plugin
 * Fri Feb 25 2005 Morris Jette <jette1@llnl.gov>
 - added proctrack_sid plugin
 * Thu Feb 24 2005 Morris Jette <jette1@llnl.gov>
