--- a/trunk/doc/man/Makefile.am
+++ b/trunk/doc/man/Makefile.am
@@ -67,6 +67,7 @@ man3_MANS = man3/slurm_hostlist_create.3 \
 	man3/slurm_spawn_kill.3 \
 	man3/slurm_step_ctx_create.3 \
 	man3/slurm_step_ctx_destroy.3 \
+	man3/slurm_step_ctx_get.3 \
 	man3/slurm_step_ctx_set.3 \
 	man3/slurm_strerror.3 \
 	man3/slurm_submit_batch_job.3 \
