--- a/trunk/slurm/slurm.h.in
+++ b/trunk/slurm/slurm.h.in
@@ -226,7 +226,8 @@ enum ctx_keys {
 	SLURM_STEP_CTX_ENV,	/* set environment variable count and values */
 	SLURM_STEP_CTX_STEPID,	/* get the created job step id */
 	SLURM_STEP_CTX_TASKS,	/* get array of task count on each node */
-	SLURM_STEP_CTX_TID	/* get array of task IDs for specified node */
+	SLURM_STEP_CTX_TID,	/* get array of task IDs for specified node */
+	SLURM_STEP_CTX_RESP	/* get job step create response message */
 };
 
 /*****************************************************************************\
