--- a/trunk/doc/man/Makefile.am
+++ b/trunk/doc/man/Makefile.am
@@ -44,6 +44,7 @@ man3_MANS = man3/slurm_hostlist_create.3 \
 	man3/slurm_init_part_desc_msg.3 \
 	man3/slurm_job_step_create.3 \
 	man3/slurm_job_will_run.3 \
+	man3/slurm_jobinfo_ctx_get.3 \
 	man3/slurm_kill_job.3 \
 	man3/slurm_kill_job_step.3 \
 	man3/slurm_load_ctl_conf.3 \
