Include IBM Federation required libraries within slurmctld executable so that switch/federation can resolve Federation API symbols.

--- a/trunk/src/slurmctld/Makefile.am
+++ b/trunk/src/slurmctld/Makefile.am
@@ -42,7 +42,8 @@ slurmctld_SOURCES = 	\
 	state_save.h	\
 	step_mgr.c
 
-slurmctld_LDFLAGS = -export-dynamic $(CMD_LDFLAGS) $(BGL_LDFLAGS)
+slurmctld_LDFLAGS = -export-dynamic $(CMD_LDFLAGS) $(BGL_LDFLAGS) \
+			$(FEDERATION_LDFLAGS)
 
 force:
 $(slurmctld_LDADD) : force
