Include IBM Federation required libraries within slurmd executable so that switch/federation can resolve Federation API symbols.

--- a/trunk/src/slurmd/Makefile.am
+++ b/trunk/src/slurmd/Makefile.am
@@ -32,7 +32,7 @@ slurmd_SOURCES = 	        	\
 	proctrack.c proctrack.h		\
 	setproctitle.c setproctitle.h
 
-slurmd_LDFLAGS = -export-dynamic $(CMD_LDFLAGS)
+slurmd_LDFLAGS = -export-dynamic $(CMD_LDFLAGS) $(FEDERATION_LDFLAGS)
 
 force:
 $(slurmd_LDADD) : force
