--- a/trunk/slurm/slurm.h.in
+++ b/trunk/slurm/slurm.h.in
@@ -111,11 +111,13 @@ BEGIN_C_DECLS
 #define SLURM_VERSION_MICRO(a)    ((a)        & 0xff)
 
 /* Define the API's version. Update in META as needed. 
+ * Also defined in config.h. 
  * High-order byte is major version. Update when existing APIs change.
  * Middle byte     is minor version. Update when new functions are added.
  * Low-order byte  is micro version. Update on patches and bug fixes. */
-
+#ifndef SLURM_API_VERSION
 #undef SLURM_API_VERSION
+#endif
 
 /*****************************************************************************\
  *	DEFINITIONS FOR INPUT VALUES
