Move BGL prolog/epilog bglblock state testing from stand-along programs on FEN to programs that invoke RPCs to status the bglblock.

--- a/branches/slurm-0-4-branch/src/plugins/select/bluegene/Makefile.am
+++ b/branches/slurm-0-4-branch/src/plugins/select/bluegene/Makefile.am
@@ -27,7 +27,11 @@ select_bluegene_la_LIBADD  = $(top_builddir)/src/partition_allocator/libpartitio
 
 sbin_PROGRAMS = slurm_prolog slurm_epilog
 
+slurm_prolog_LDADD = $(top_builddir)/src/common/libcommon.la \
+		$(top_builddir)/src/api/libslurm.la
+slurm_epilog_LDADD =  $(top_builddir)/src/common/libcommon.la \
+		$(top_builddir)/src/api/libslurm.la
 slurm_prolog_SOURCES = slurm_prolog.c
 slurm_epilog_SOURCES = slurm_epilog.c
-slurm_prolog_LDFLAGS = -export-dynamic $(CMD_LDFLAGS) $(BGL_LDFLAGS)
-slurm_epilog_LDFLAGS = -export-dynamic $(CMD_LDFLAGS) $(BGL_LDFLAGS)
+slurm_prolog_LDFLAGS = -export-dynamic $(CMD_LDFLAGS)
+slurm_epilog_LDFLAGS = -export-dynamic $(CMD_LDFLAGS)
