fix in prolog/epilog to not call getpwname(), happens in the status thread now when a user_name is changed.

--- a/branches/slurm-0-4-branch/src/sinfo/Makefile.am
+++ b/branches/slurm-0-4-branch/src/sinfo/Makefile.am
@@ -18,5 +18,5 @@ force:
 $(sinfo_LDADD) : force
 	@cd `dirname $@` && $(MAKE) `basename $@`
 
-sinfo_LDFLAGS = -export-dynamic $(CMD_LDFLAGS) $(BGL_LDFLAGS)
+sinfo_LDFLAGS = -export-dynamic $(CMD_LDFLAGS)
 
