Move smap RPM into main slurm RPM.

--- a/branches/slurm-0-4-branch/slurm.spec.in
+++ b/branches/slurm-0-4-branch/slurm.spec.in
@@ -68,11 +68,6 @@ Summary: SLURM scheduling plugin for the Maui scheduler.
 Group: System Environment/Base
 Requires: slurm
 
-%package smap
-Summary: SLURM GUI.
-Group: System Environment/Base
-Requires: slurm
-
 %package switch-elan
 Summary: SLURM switch plugin for Quadrics Elan3 or Elan4.
 Group: System Environment/Base
@@ -102,9 +97,6 @@ SLURM plugin interfaces to IBM Blue Gene system
 
 %description sched-wiki
 SLURM scheduling plugin for the Maui scheduler.
-
-%description smap 
-SLURM GUI.
 
 %description switch-elan
 SLURM switch plugin for Quadrics Elan3 or Elan4.
@@ -167,6 +159,7 @@ rm -rf $RPM_BUILD_ROOT
 %{_bindir}/scancel
 %{_bindir}/scontrol
 %{_bindir}/sinfo
+%{_bindir}/smap
 %{_bindir}/squeue
 %{_bindir}/srun
 %{_sbindir}/slurmctld
@@ -227,11 +220,6 @@ rm -rf $RPM_BUILD_ROOT
 %{_libdir}/slurm/sched_wiki.so
 #############################################################################
 
-%files smap
-%defattr(-,root,root,0755)
-%{_bindir}/smap
-#############################################################################
-
 %files -f switch_elan.files switch-elan
 %defattr(-,root,root)
 #############################################################################
@@ -268,6 +256,8 @@ fi
 
 
 %changelog
+* Mon Apr 11 2005 Morris Jette <jette1@llnl.gov>
+- move smap executable within main slurm rpm
 * Thu Apr 07 2005 Morris Jette <jette1@llnl.gov>
 - remove duplicate prolog and epilog from primary slurm rpm
 * Thu Feb 24 2005 Morris Jette <jette1@llnl.gov>
