new federation.conf file to read in adapter interfaces on startup.

--- a/trunk/src/plugins/switch/federation/Makefile.am
+++ b/trunk/src/plugins/switch/federation/Makefile.am
@@ -1,6 +1,7 @@
 # $Id$
 # Makefile for switch/federation plugin
 
+CPPFLAGS =  -DFEDERATION_CONFIG_FILE=\"$(sysconfdir)/federation.conf\"
 AUTOMAKE_OPTIONS = foreign
 
 if HAVE_FEDERATION
