--- a/branches/slurm-0-4-branch/slurm.spec.in
+++ b/branches/slurm-0-4-branch/slurm.spec.in
@@ -182,7 +182,7 @@ rm -rf $RPM_BUILD_ROOT
 %{_libdir}/slurm/switch_none.so
 %dir %{_libdir}/slurm/src
 %config(noreplace) /etc/init.d/slurm
-%config(noreplace) /etc/slurm/slurm.conf
+%config(noreplace) /etc/slurm/slurm.conf.example
 #############################################################################
 
 %files devel
@@ -212,7 +212,7 @@ rm -rf $RPM_BUILD_ROOT
 %{_sbindir}/slurm_epilog
 %{_sbindir}/slurm_prolog
 %{_libdir}/slurm/select_bluegene.so
-%config(noreplace) /etc/slurm/bluegene.conf
+%config(noreplace) /etc/slurm/bluegene.conf.example
 #############################################################################
 
 %files sched-wiki
