--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -7,6 +7,7 @@ SUBDIRS    = auxdir src testsuite doc
 EXTRA_DIST =			\
 	Make-rpm.mk		\
 	etc/bluegene.conf.example \
+	etc/federation.conf.example \
 	etc/slurm.conf.example	\
 	etc/init.d.slurm	\
 	etc/ptrace.patch	\
