--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -44,7 +44,7 @@ AC_CHECK_HEADERS(mcheck.h values.h socket.h sys/socket.h  \
                  stdbool.h sys/ipc.h sys/shm.h sys/sem.h errno.h \
                  stdlib.h dirent.h pthread.h sys/prctl.h \
                  sysint.h inttypes.h termcap.h netdb.h sys/socket.h  \
-                 sys/systemcfg.h ncurses.h curses.h\
+                 sys/systemcfg.h ncurses.h curses.h \
 		 )
 AC_HEADER_SYS_WAIT
 AC_HEADER_TIME
@@ -103,7 +103,10 @@ LIBS="$PTHREAD_LIBS $LIBS"
 
 X_AC_BGL
 X_AC_SLURM_SEMAPHORE
+
 X_AC_NCURSES
+AM_CONDITIONAL(HAVE_SOME_CURSES, test "x$ac_have_some_curses" = "xyes")
+AC_SUBST(HAVE_SOME_CURSES)
 
 dnl checks for system services.
 dnl
