Add pointer to mail.html for distribution.

--- a/trunk/doc/Makefile.am
+++ b/trunk/doc/Makefile.am
@@ -16,6 +16,7 @@ html_DATA = \
 	html/help.html \
 	html/jobcompplugins.html \
 	html/lll.gif \
+	html/mail.html \
 	html/maui.html \
 	html/news.html \
 	html/overview.html \
