--- a/trunk/etc/bluegene.conf.example
+++ b/trunk/etc/bluegene.conf.example
@@ -37,6 +37,7 @@ BridgeAPIVerbose=0
 # Type:  Connection type "mesh" or "torus", default is "torus"
 # 
 # NOTE: A bglblock is implicitly created containing all resources on the system
+# NOTE: Bglblocks must not overlap (except for implicitly created bglblock)
 # NOTE: All Nodes defined here must also be defined in the slurm.conf file
 #
 
