added sfree to the spec.in and added support to make more idiot proof the resolve feature in smap

--- a/trunk/slurm.spec.in
+++ b/trunk/slurm.spec.in
@@ -225,6 +225,7 @@ rm -rf $RPM_BUILD_ROOT
 %doc etc/bluegene.conf.example
 %{_sbindir}/slurm_epilog
 %{_sbindir}/slurm_prolog
+%{_sbindir}/sfree
 %{_libdir}/slurm/select_bluegene.so
 %config /etc/slurm/bluegene.conf.example
 #############################################################################
