Added ibm.html and revise bluegene.html doc

--- a/trunk/doc/Makefile.am
+++ b/trunk/doc/Makefile.am
@@ -14,6 +14,7 @@ html_DATA = \
 	html/entities.gif \
 	html/faq.html \
 	html/help.html \
+	html/ibm.html \
 	html/jobcompplugins.html \
 	html/lll.gif \
 	html/mail.html \
