--- a/trunk/etc/bluegene.conf.example
+++ b/trunk/etc/bluegene.conf.example
@@ -1,4 +1,4 @@
-#
+###############################################################################
 # Global specifications for BlueGene system
 #
 # BlrtsImage:     BlrtsImage used for creation of all bglblocks.
@@ -20,56 +20,36 @@
 # 
 # NOTE: The bgl_serial value is set at configuration time using the 
 #       "--with-bgl-serial=" option. Its default value is "BGL".
-#
+###############################################################################
 BlrtsImage=/bgl/BlueLight/ppcfloor/bglsys/bin/rts_hw.rts
 LinuxImage=/bgl/BlueLight/ppcfloor/bglsys/bin/zImage.elf
 MloaderImage=/bgl/BlueLight/ppcfloor/bglsys/bin/mmcs-mloader.rts
 RamDiskImage=/bgl/BlueLight/ppcfloor/bglsys/bin/ramdisk.elf
 Numpsets=8
-#
+
 BridgeAPILogFile=/var/log/slurm/bridgeapi.log
 BridgeAPIVerbose=0
 
-#
+###############################################################################
 # Define the static partitions (bglblocks)
 #
 # Nodes: The base partitions (midplanes) in the bglblock using XYZ coordinates
-# Type:  Connection type "mesh" or "torus", default is "torus"
+# Type:  Connection type "MESH" or "TORUS", default is "TORUS"
 # 
-# NOTE: A bglblock is implicitly created containing all resources on the system
-# NOTE: Bglblocks must not overlap (except for implicitly created bglblock)
-# NOTE: All Nodes defined here must also be defined in the slurm.conf file
-#
-
-# volume = 1x1x1 = 1
-Nodes=bgl[000x000]
-Nodes=bgl[001x001]
-Nodes=bgl[010x010]
-Nodes=bgl[011x011]
-
-# volume = 1x1x2 = 2
-Nodes=bgl[020x021]
-Nodes=bgl[030x031]
-Nodes=bgl[002x003]
-Nodes=bgl[012x013]
-Nodes=bgl[022x023]
-Nodes=bgl[032x033]
-
-# volume 1x2x2 = 4
-Nodes=bgl[100x111]
-Nodes=bgl[120x131]
-Nodes=bgl[102x113]
-Nodes=bgl[122x133]
- 
-# volume = 2x2x2 = 8
-Nodes=bgl[200x311]
-Nodes=bgl[220x331]
-Nodes=bgl[220x331]
-Nodes=bgl[202x313]
-Nodes=bgl[222x333]
-
-# volume = 4x4x4 = 64
-Nodes=bgl[400x733]
-
-# volume = 8x4x4 = 128
-# Nodes=bgl[000x733]   Full-system bglblock, implicitly created 
+# IMPORTANT NOTES: 
+# * A bglblock is implicitly created containing all resources on the system
+# * Bglblocks must not overlap (except for implicitly created bglblock)
+#   This will be the case when smap is used to create a configuration file
+# * All Nodes defined here must also be defined in the slurm.conf file
+###############################################################################
+# LEAVE NEXT LINE AS A COMMENT, Full-system bglblock, implicitly created
+# Nodes=bgl[000x333] Type=TORUS   # 4x4x4 = 64 midplanes
+###############################################################################
+# smap bglblock layout here:
+Nodes=bgl[000x133] Type=TORUS     # 2x4x4 = 32
+Nodes=bgl[200x233] Type=TORUS     # 1x4x4 = 16
+Nodes=bgl[300x313] Type=TORUS     # 1x2x4 =  8
+Nodes=bgl[320x323] Type=TORUS     # 1x1x4 =  4
+Nodes=bgl[330x331] Type=TORUS     # 1x1x2 =  2
+Nodes=bgl[332x332] Type=TORUS     # 1x1x1 =  1
+Nodes=bgl[333x333] Type=TORUS     # 1x1x1 =  1
