--- a/trunk/src/common/Makefile.am
+++ b/trunk/src/common/Makefile.am
@@ -55,6 +55,7 @@ libcommon_la_SOURCES = 			\
 	uid.c uid.h			\
 	util-net.c util-net.h		\
 	slurm_auth.c slurm_auth.h	\
+	slurm_jobacct.c slurm_jobacct.h \
 	slurm_jobcomp.c slurm_jobcomp.h	\
 	switch.c switch.h		\
 	arg_desc.c arg_desc.h		\
